--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "axios": "^1.3.3"
+    "axios": "^1.3.3",
+    "jest": "^29.4.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
